# aiops-release-engineering

./: .gitignore  Makefile  README.md  ai-ops.yaml  pyproject.toml
examples/: SKILL.md  drift_evalset.json  sample_agent.py  zero2hero.md
experiments/evolve_ast_hasher/: README.md  evaluator.py  example_evaluation.json  initial_program.py  problem_description.md  pyproject.toml  test_evaluator.py  test_program.py
experiments/evolve_ast_hasher/.evolve/: experiment_description.json  source_map.json
src/ai_ops_release/: __init__.py  cli.py  config.py  engine.py
src/ai_ops_release/evaluators/: __init__.py  code_drift.py  drift.py  preflight.py
src/ai_ops_release/utils/: __init__.py
tests/: test_cli.py  test_code_drift.py  test_drift.py  test_engine.py  test_preflight.py  test_version_sync.py
