[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-ops-release"
version = "1.0.0"
description = "Autonomous Release Engineering Engine for AIOps (AI Agent CI/CD & Gating)"
readme = "README.md"
authors = [
    { name = "Enrique", email = "enriquekalven@gmail.com" }
]
requires-python = ">=3.10, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "pandas>=2.0.0",
    "google-adk>=1.24.0",
    "google-genai>=1.73.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
aops = "ai_ops_release.cli:main"
aops-release = "ai_ops_release.cli:main"
ai-ops = "ai_ops_release.cli:main"
zero2hero = "ai_ops_release.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_ops_release"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples",
    "README.md",
    "ai-ops.yaml",
    "Makefile",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
asyncio_mode = "auto"
